Country-Integration/force-app/main/default/objects/Country__c/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <label>Acronym</label>
    <length>200</length>
    <type>Text</type>
</CustomField>