Country-Integration/force-app/main/default/objects/Country__c/fields/Alpha2Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha2Code__c</fullName>
    <label>Alpha2Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>