Country-Integration/force-app/main/default/objects/Country__c/fields/Alpha3Code__c.field-meta.xml
<CustomField>
    <fullName>Alpha3Code__c</fullName>
    <label>Alpha3Code</label>
    <length>200</length>
    <type>Text</type>
</CustomField>